--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -683,6 +683,7 @@ p {
     letter-spacing: 5px;
     text-align: center;
     color: #ffffff;
+    margin-top: 109px;
   } 
     p {
 
@@ -696,7 +697,7 @@ p {
   letter-spacing: normal;
   text-align: center;
   color: #cccccc;
-  margin-top: 181px;
+  margin-top: 52px;
     }
 }
 
